# aisbom

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  action.yml  aisbom.spec  pyproject.toml  release_notes.txt  run_aisbom.py
.agent/workflows/: process_dependabot_pr.md
.github/: MAINTAINERS.md  dependabot.yml
.github/workflows/: binaries.yml  ci.yml  publish.yml  tests.yml
action/: README_ACTION.md  entrypoint.sh  platform_upload.py  post_comment.py
aisbom/: cli.py  diff.py  linter.py  loop_state.py  mock_generator.py  properties.py  remote.py  safety.py  scanner.py  spdx_gen.py  telemetry.py  version_check.py
demo_data/: generate_malware.py  generate_restricted_model.py  requirements.txt
docs/: air-gapped-guide.md  release-process.md  sandboxed-execution.md
docs/adr/: 0001-hf-token-auth-scoped-to-huggingface-host.md
docs/architecture/: ADR-001-defense-in-depth.md
repro_stage/: mock_broken.pt
scripts/: asb-wrapper.sh  build_binaries.sh  safe_loader.py
tests/: conftest.py  test_action_platform_upload.py  test_action_wrapper.py  test_cli_integration.py  test_coverage_fix.py  test_diff.py  test_linter.py  test_loop_state.py  test_mock_generator.py  test_properties.py  test_pth_fix.py  test_remote.py  test_safety.py  test_scanner.py  test_scanner_cli.py  test_spdx.py  test_telemetry.py  test_version_check.py
